# logger

./: CMakeLists.txt  LICENSE  Makefile  file_logger.c  file_logger.h  global_logger.c  global_logger.h  liblogger.pc  logger.c  logger.h  omake.lua  stdio_logger.c  stdio_logger.h  test.c  test_logger.c
include/logger/: dummy_logger.h  logger.h  stdio_logger.h  stdout_logger.h
src/: dummy_logger.c  file_logger.c  mutex_def.h  stdio_logger.c  stdout_logger.c  utils.h
tests/: CMakeLists.txt  Makefile  omake.lua  test_logger.c
